# KeyOS

./: .dockerignore  .gitattributes  .gitignore  .minirc.dfl  .taplo.toml  Cargo.toml  DEVELOPMENT.md  Dockerfile  FORMATTING.md  Justfile  README.md  REPRODUCIBILITY.md  decred_beautiful.slint  decred_receive.slint  decred_review.slint  decred_signed.slint  env-example  flake.nix  localazy.json  localizer.json  manifest.scm  package-lock.json  permission_templates.toml  rust-toolchain.toml  rustfmt.toml  s  test.slint
api/app-manager/: Cargo.toml  manifest.toml
api/app-manager/src/: error.rs  lib.rs  messages.rs
api/backup/: Cargo.toml  manifest.toml
api/backup/src/: error.rs  lib.rs  messages.rs
api/bt/: Cargo.toml  manifest.toml
api/bt/src/: error.rs  lib.rs  messages.rs
api/crypto/: Cargo.toml  manifest.toml
api/crypto/src/: error.rs  lib.rs  messages.rs
api/dma/: Cargo.toml  manifest.toml
api/dma/src/: error.rs  lib.rs  messages.rs
api/fs/: Cargo.toml  manifest.toml
api/fs/src/: adapter.rs  error.rs  flags.rs  lib.rs  messages.rs
api/gpio/: Cargo.toml  manifest.toml
api/gpio/src/: lib.rs  messages.rs  pins.rs
api/gui-server/: Cargo.toml  manifest.toml
api/gui-server/src/: consts.rs  error.rs  lib.rs  msg.rs  navigation.rs  simulator.rs  touch.rs  utils.rs
api/gui-server/src/msg/: camera.rs  control_center.rs  keyboard.rs  navigation.rs  register.rs  scalar.rs  simulator.rs
api/gui-server/src/navigation/: alerts.rs  bitcoin.rs  filepicker.rs  lockscreen.rs  qrscanner.rs  securitykeys.rs
api/haptics/: Cargo.toml  manifest.toml
api/haptics/src/: lib.rs  messages.rs
api/power-manager/: Cargo.toml  manifest.toml
api/power-manager/src/: error.rs  lib.rs  messages.rs
api/quantum-link/: Cargo.toml  manifest.toml
api/quantum-link/src/: lib.rs  messages.rs  worker.rs
api/rgb-led/: Cargo.toml  manifest.toml
api/rgb-led/src/: lib.rs  messages.rs
api/security/: Cargo.toml  manifest.toml
api/security/src/: lib.rs  messages.rs
api/settings/: Cargo.toml  manifest.toml
api/settings/src/: lib.rs  macros.rs  messages.rs  types.rs
api/spi/: Cargo.toml  manifest.toml
api/spi/src/: error.rs  lib.rs  messages.rs  periph.rs
api/update/: Cargo.toml  manifest.toml
api/update/src/: error.rs  lib.rs  messages.rs
api/usb/: Cargo.toml  manifest.toml
api/usb/src/: error.rs  lib.rs
api/usb/src/device/: api.rs  messages.rs  mod.rs
api/usb/src/host/: api.rs  messages.rs  mod.rs
apps/gui-app-authenticator/: Cargo.toml  README.md  manifest.toml
apps/gui-app-authenticator/i18n/: en.json  es.json
apps/gui-app-authenticator/src/: lib.rs  main.rs
apps/gui-app-authenticator/ui/: app.slint  authenticator-callbacks.slint  authenticator-types.slint
apps/gui-app-authenticator/ui/pages/add/: page.slint
apps/gui-app-authenticator/ui/pages/edit/: page.slint  props.slint
apps/gui-app-authenticator/ui/pages/main/: page.slint
apps/gui-app-authenticator/ui/pages/opened-card/: page.slint  props.slint
apps/gui-app-bitcoin/: Cargo.toml  build.rs  manifest.toml
apps/gui-app-bitcoin/i18n/: en.json
apps/gui-app-bitcoin/src/: account_id.rs  bitcoin_settings.rs  callbacks.rs  create_account.rs  enter_passphrase.rs  export_account.rs  load.rs  main.rs  message_signing.rs  psbt_signing.rs  state.rs  store.rs  verify_address.rs
apps/gui-app-bitcoin/src/export_account/: bitcoin_core.rs  bitcoin_keeper.rs  blue_wallet.rs  btcpay.rs  bull.rs  coinbits.rs  electrum.rs  envoy.rs  fully_noded.rs  nunchuk.rs  sparrow.rs  specter.rs  theya.rs  zeus.rs
apps/gui-app-bitcoin/ui/: app.slint  callbacks.slint  create-account.slint  enter-passphrase.slint  export-account.slint  settings.slint  sign-message.slint  sign-psbt.slint  verify-address.slint
apps/gui-app-bitcoin/ui/pages/: page.slint  props.slint
apps/gui-app-bitcoin/ui/pages/account/: page.slint  (+1 more)
apps/gui-app-bitcoin/ui/widgets/: dark-overlay.slint  multisig.slint  transaction-card.slint  verify-address.slint
apps/gui-app-bt-test/: Cargo.toml  README.md  build.rs  manifest.toml
apps/gui-app-bt-test/ui/: app.slint
apps/gui-app-decred/: Cargo.toml  build.rs  manifest.toml
apps/gui-app-decred/i18n/: en.json
apps/gui-app-decred/src/: create_account.rs  keys.rs  main.rs  receive.rs  seed_display.rs  sign_tx.rs  state.rs
apps/gui-app-decred/ui/: account.slint  app.slint  balance.slint  dcr-account-card.slint  receive.slint  seed-display.slint  sign-tx.slint
apps/gui-app-decred/ui/pages/: _preview_home.slint  page.slint  props.slint
cryptoauthlib/: Cargo.toml  README.md  build.rs
cryptoauthlib/cryptoauthlib/: CMakeLists.txt
cryptoauthlib/cryptoauthlib/lib/: CMakeLists.txt
cryptoauthlib/cryptoauthlib/lib/calib/: calib_privwrite.c
cryptoauthlib/src/: inner.rs  lib.rs
cryptoauthlib/src/inner/: bindings.rs  hal.rs
i18n/: Cargo.toml  icu4x_data.postcard
i18n/src/: lib.rs
keyos/: Cargo.toml
keyos/src/: batt.rs  lib.rs  stack_canary.rs
loader/: Cargo.toml  build.rs
loader/src/: args.rs  asm.S  asm.rs  boot.rs  bootconfig.rs  consts.rs  debug.rs  link.x  load.rs  main.rs  panic.rs
server/: Cargo.toml
server/macro/: Cargo.toml
server/macro/src/: lib.rs
server/src/: archive.rs  checked_conn.rs  definitions.rs  error.rs  lend_mut.rs  lib.rs  macros.rs  move.rs  owned.rs  rkyv_with.rs  scalar.rs  server.rs  utils.rs
server/src/deferred/: lend_mut.rs  mod.rs
server/src/event/: archive.rs  mod.rs  scalar.rs
systemview-keyos/: Cargo.toml  README.md  SYSVIEW_KeyOS.txt  build.rs
systemview-keyos/lib/Config/: SEGGER_RTT_Conf.h
systemview-keyos/lib/SEGGER/: SEGGER_RTT.c  SEGGER_SYSVIEW.c  SEGGER_SYSVIEW.h  SEGGER_SYSVIEW_ConfDefaults.h
systemview-keyos/src/: bindings.rs  lib.rs  macros.rs  wrapper.h
worker/: Cargo.toml
worker/src/: implementation.rs  lib.rs  response.rs  sleep.rs  subscription.rs  task.rs  timeout.rs  watch.rs
xtask/: Cargo.toml
xtask/src/: bootimage.rs  bootloader.rs  builder.rs  elf.rs  flash.rs  main.rs  release_generator.rs  symbolicate.rs  utils.rs  xous_arguments.rs
xtask/src/tags/: belf.rs  memory.rs  mod.rs  permission.rs
(+1602 files in other folders)
