# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "xtask"
description = "Cargo-based build system for KeyOS"
version = "0.1.0"
authors = [
    "Sean Cross <sean@xobs.io>",
    "Foundation Devices, Inc. <hello@foundation.xyz>",
]
edition = "2021"

# Dependency versions enforced by Cargo.lock.
[dependencies]
anyhow = "1"
app-manifest = { path = "../os/app-manifest" }
cargo_metadata = "0.18"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"
crc = "1.8.1"
fatfs = { workspace = true, features = ["std", "alloc"] }
filetime = "0.2.14"
fscommon = "0.1.1"
hex = "0.4"
keyos = { path = "../keyos" }
mbrs = "0.3.1"
once_cell = "1.20.3"
regex = "1"
release-manifest = { path = "../release-manifest" }
rustc_version = "0.4.0"
sambuca = { path = "../utils/sambuca/" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.41"
sha2 = "0.10.8"
slint-keyos-platform-build = { path = "../slint-keyos-platform/build" }
svd2utra = "0.1.11"
tar = { workspace = true }
tempfile = "3.3.0"
ureq = { version = "2.9.6", features = ["json"] }
utralib = { workspace = true }
xmas-elf = "0.10.0"
xous = { package = "xous", path = "../xous/xous-rs" }
zip = "0.6"
