# SPDX-FileCopyrightText: 2025 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "app-manager"
version = "0.1.0"
edition = "2021"
description = "App Manager API crate"
publish = false

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
rkyv = { workspace = true }
server = { workspace = true }
thiserror = { workspace = true }
xous = { workspace = true }

[target.'cfg(not(keyos))'.dependencies]
fs = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(keyos)'] }
