# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "crypto"
version = "0.1.0"
edition = "2021"
description = "Hardware-acclerated cryptography API crate"
publish = false

[dependencies]
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
rkyv = { workspace = true }
server = { workspace = true }
thiserror = "1.0"
xous = { workspace = true }

[target.'cfg(keyos)'.dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(keyos)'] }
