# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "dma"
version = "0.1.0"
edition = "2021"
description = "DMA API crate"
publish = false

[dependencies]
log = "0.4.14"
log-server = { package = "xous-api-log", path = "../../xous/api/log" }
rkyv = { workspace = true }
server = { path = "../../server" }
thiserror = "1.0"
xous = { path = "../../xous/xous-rs" }

[target.'cfg(keyos)'.dependencies]
atsama5d27 = { workspace = true, features = ["rkyv"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(keyos)'] }
