# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "haptics"
version = "0.1.0"
edition = "2021"
description = "Haptics API crate"
publish = false

[dependencies]
log = { workspace = true }
num-derive = "0.4.2"
num-traits = "0.2.18"
server = { workspace = true }
xous = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(keyos)'] }
