# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "rgb-led"
version = "0.1.0"
edition = "2021"
description = "RGB LED API crate"
publish = false

[dependencies]
log = { workspace = true }
server = { workspace = true }
xous = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(keyos)'] }
