# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "gui-app-authenticator"
version = "0.1.0"
edition = "2021"

[dependencies]
fs = { workspace = true }
fuzzy-filter = "0.1.0"
i18n = { path = "../../i18n" }
log = "0.4.14"
log-server = { package = "xous-api-log", path = "../../xous/api/log" }
ordered-table = { path = "../../utils/ordered-table" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint-keyos-platform = { path = "../../slint-keyos-platform/runtime" }
thiserror = "1.0"
totp-rs = { version = "5.6.0", features = ["otpauth", "serde_support"] }

[build-dependencies]
slint-keyos-platform-build = { path = "../../slint-keyos-platform/build" }
