# SPDX-FileCopyrightText: 2024 Foundation Devices, Inc. <hello@foundation.xyz>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "gui-app-bt-test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bt = { workspace = true }
hex = "0.4.3"
log = "0.4.14"
log-server = { package = "xous-api-log", path = "../../xous/api/log" }
slint-keyos-platform = { path = "../../slint-keyos-platform/runtime" }

[build-dependencies]
slint-keyos-platform-build = { path = "../../slint-keyos-platform/build" }
